# learning-django-stripe-auth

./: db.sqlite3  manage.py  pyproject.toml
learning_dj_stripe_auth/: asgi.py  settings.py  urls.py  wsgi.py
templates/: home.html
users/: models.py
users/migrations/: 0001_initial.py
