[tool.poetry]
name = "learning-dj-stripe-auth"
version = "0.1.0"
description = ""
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
django-allauth = "^0.42.0"
stripe = "^2.48.0"
dj-stripe = "^2.3.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
